--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       font-family: 'Montserrat', sans-serif;
     }
 
+    /* Titre supprimé donc ce style aussi peut être enlevé si tu veux */
+    /*
     .categories-slider h2 {
       text-align: center;
       font-size: 22px;
@@ -32,6 +34,7 @@
       margin-bottom: 40px;
       font-weight: 400;
     }
+    */
 
     .swiper {
       padding-bottom: 40px;
@@ -102,8 +105,7 @@
 </head>
 <body>
   <section class="categories-slider" data-aos="fade-up" data-aos-duration="1000">
-    <h2>Nos Categories</h2>
-    <p class="subtitle">Découvrez nos categories classés par besoins pour une beauté naturelle et consciente.</p>
+    <!-- Titre et sous-titre supprimés ici -->
 
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
