--- a/index.html
+++ b/index.html
@@ -13,28 +13,9 @@
   <style>
     .categories-slider {
       padding: 60px 20px;
-      background-color: #ffffff; /* bg blanc */
+      background-color: #ffffff;
       font-family: 'Montserrat', sans-serif;
     }
-
-    /* Titre supprimé donc ce style aussi peut être enlevé si tu veux */
-    /*
-    .categories-slider h2 {
-      text-align: center;
-      font-size: 22px;
-      font-weight: 700;
-      color: #000;
-      margin-bottom: 12px;
-    }
-
-    .categories-slider p.subtitle {
-      text-align: center;
-      font-size: 14px;
-      color: #595959;
-      margin-bottom: 40px;
-      font-weight: 400;
-    }
-    */
 
     .swiper {
       padding-bottom: 40px;
@@ -105,12 +86,10 @@
 </head>
 <body>
   <section class="categories-slider" data-aos="fade-up" data-aos-duration="1000">
-    <!-- Titre et sous-titre supprimés ici -->
-
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <!-- Catégorie 1 -->
-        <a href="/categorie/soins-visage" class="swiper-slide">
+        <a href="https://luneoracosmiteques.com/collections/luneora-skincare" target="_top" class="swiper-slide">
           <img src="https://cdn.youcan.shop/stores/c795db5cea64aae47157edb49a145ffe/others/9pj9QEikJrY838lCXgvRUfUTRwPcheEWJMtl78Ac.png" alt="Visage" />
           <div class="category-overlay">
             <div class="category-title">Soins Visage</div>
@@ -118,7 +97,7 @@
         </a>
 
         <!-- Catégorie 2 -->
-        <a href="/categorie/cheveux" class="swiper-slide">
+        <a href="https://luneoracosmiteques.com/collections/luneora-skincare" target="_top" class="swiper-slide">
           <img src="https://i.postimg.cc/XJCyW0WH/cheveux-cat-image.jpg" alt="Cheveux" />
           <div class="category-overlay">
             <div class="category-title">Cheveux</div>
@@ -126,7 +105,7 @@
         </a>
 
         <!-- Catégorie 3 -->
-        <a href="/categorie/corps" class="swiper-slide">
+        <a href="https://luneoracosmiteques.com/collections/luneora-skincare" target="_top" class="swiper-slide">
           <img src="https://i.postimg.cc/GtnThShc/corps-cat.jpg" alt="Corps" />
           <div class="category-overlay">
             <div class="category-title">Soins Corps</div>
@@ -134,7 +113,7 @@
         </a>
 
         <!-- Catégorie 4 -->
-        <a href="/categorie/solaires" class="swiper-slide">
+        <a href="https://luneoracosmiteques.com/collections/luneora-skincare" target="_top" class="swiper-slide">
           <img src="https://i.postimg.cc/Rh163QNw/solaire-cat-image.jpg" alt="Solaires" />
           <div class="category-overlay">
             <div class="category-title">Solaires</div>
@@ -142,7 +121,7 @@
         </a>
 
         <!-- Catégorie 5 -->
-        <a href="/categorie/routines" class="swiper-slide">
+        <a href="https://luneoracosmiteques.com/collections/luneora-skincares" target="_top" class="swiper-slide">
           <img src="https://cdn.youcan.shop/stores/c795db5cea64aae47157edb49a145ffe/others/9pj9QEikJrY838lCXgvRUfUTRwPcheEWJMtl78Ac.png" alt="Routines" />
           <div class="category-overlay">
             <div class="category-title">Nos Pack</div>
